--- a/.github/actions/docker_hub_push/action.yml
+++ b/.github/actions/docker_hub_push/action.yml
@@ -20,7 +20,7 @@ runs:
         DOCKER_USERNAME: ${{ inputs.docker-username }}
         DOCKER_PASSWORD: ${{ inputs.docker-password }}
     - name: Build ${{ inputs.ruby-version }}
-      run: docker build -t masoo/ubuntu-2204-ruby:${{ inputs.ruby-version }} .
+      run: docker build -t masoo/ubuntu-2204-ruby:${{ inputs.ruby-version }} --build-arg ${{ inputs.ruby-version }} .
     - name: Push to docker hub :${{ inputs.ruby-version }}
       uses: actions-hub/docker@master
       with:
