--- a/.github/actions/docker_hub_push/action.yml
+++ b/.github/actions/docker_hub_push/action.yml
@@ -19,7 +19,7 @@ runs:
       env:
         DOCKER_USERNAME: ${{ inputs.docker-username }}
         DOCKER_PASSWORD: ${{ inputs.docker-password }}
-    - name: Build ${{ inputs.ruby-version }}
+    - name: Build ruby
       run: docker build -t masoo/ubuntu-2204-ruby:${{ inputs.ruby-version }} --build-arg ${{ inputs.ruby-version }} .
     - name: Push to docker hub :${{ inputs.ruby-version }}
       uses: actions-hub/docker@master
