--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -5,8 +5,7 @@ on:
   schedule:
     # UTC 15:10 on Saturday
     # JST 0:10 on Sunday
-    #- cron: "10 15 * * 6"
-    - cron: "10 15 * * *"
+    - cron: "10 15 * * 6"
 jobs:
   deploy:
     name: deploy
