--- a/.github/actions/docker_hub_push/action.yml
+++ b/.github/actions/docker_hub_push/action.yml
@@ -10,19 +10,39 @@ inputs:
   ruby-version:
     description: "Ruby Version"
     required: true
+  enable-cache-to:
+    description: "Enable cache-to for registry cache"
+    required: false
+    default: "false"
 
 runs:
   using: "composite"
   steps:
-    - name: Login to docker hub
-      uses: actions-hub/docker/login@master
-      env:
-        DOCKER_USERNAME: ${{ inputs.docker-username }}
-        DOCKER_PASSWORD: ${{ inputs.docker-password }}
-    - name: Build ${{ inputs.ruby-version }}
-      shell: bash
-      run: docker build -t masoo/ubuntu-2204-ruby:${{ inputs.ruby-version }} --build-arg ${{ inputs.ruby-version }} .
-    - name: Push to docker hub :${{ inputs.ruby-version }}
-      uses: actions-hub/docker@master
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+    - name: Login to DockerHub
+      uses: docker/login-action@v3
       with:
-        args: push masoo/ubuntu-2204-ruby:${{ inputs.ruby-version }}
+        username: ${{ inputs.docker-username }}
+        password: ${{ inputs.docker-password }}
+    - name: Build and push Ruby ${{ inputs.ruby-version }} (with cache-to)
+      if: ${{ inputs.enable-cache-to == 'true' }}
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        push: true
+        tags: masoo/ubuntu-2204-ruby:${{ inputs.ruby-version }}
+        build-args: |
+          RUBY_VERSION=${{ inputs.ruby-version }}
+        cache-from: type=registry,ref=masoo/ubuntu-2204-ruby:buildcache
+        cache-to: type=registry,ref=masoo/ubuntu-2204-ruby:buildcache,mode=max
+    - name: Build and push Ruby ${{ inputs.ruby-version }} (without cache-to)
+      if: ${{ inputs.enable-cache-to != 'true' }}
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        push: true
+        tags: masoo/ubuntu-2204-ruby:${{ inputs.ruby-version }}
+        build-args: |
+          RUBY_VERSION=${{ inputs.ruby-version }}
+        cache-from: type=registry,ref=masoo/ubuntu-2204-ruby:buildcache
