--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -1,17 +1,38 @@
-name: Build / Push for Ubuntu 22.04 ruby
+name: Build and Push Ruby Docker Image for Ubuntu 22.04
 
 on:
   workflow_dispatch:
   schedule:
-    # UTC 15:10 on Saturday
-    # JST 0:10 on Sunday
-    - cron: "10 15 * * 6"
+    # UTC 15:10 on Thursday
+    # JST 0:10 on Friday
+    - cron: "10 15 * * 4"
+
+env:
+  LATEST_RUBY_VERSION: "3.4.5"
+
 jobs:
-  deploy:
-    name: deploy
+  build-latest:
+    name: Build Ruby "3.4.5" (latest)
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - uses: ./.github/actions/docker_hub_push
+        with:
+          docker-username: ${{ secrets.DOCKER_USERNAME }}
+          docker-password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
+          ruby-version: ${{ env.LATEST_RUBY_VERSION }}
+          enable-cache-to: "true"
+
+  build-others:
+    name: Build Ruby ${{ matrix.ruby-version }}
+    needs: build-latest
     runs-on: ubuntu-latest
     strategy:
       matrix:
+        exclude:
+          # Exclude the latest version since it's already built
+          - ruby-version: "3.4.5"
         ruby-version: [
           3.0.0, 3.0.1, 3.0.2, 3.0.3, 3.0.4, 3.0.5, 3.0.6, 3.0.7,
           3.1.0, 3.1.1, 3.1.2, 3.1.3, 3.1.4, 3.1.5, 3.1.6, 3.1.7,
@@ -22,9 +43,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: login / build / push to dockerhub
-        uses: ./.github/actions/docker_hub_push
+      - uses: ./.github/actions/docker_hub_push
         with:
           docker-username: ${{ secrets.DOCKER_USERNAME }}
           docker-password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
           ruby-version: ${{ matrix.ruby-version }}
+          enable-cache-to: "false"
