add cache buster.

--- a/.github/actions/docker_hub_push/action.yml
+++ b/.github/actions/docker_hub_push/action.yml
@@ -34,6 +34,7 @@ runs:
         tags: masoo/ubuntu-2204-ruby:${{ inputs.ruby-version }}
         build-args: |
           RUBY_VERSION=${{ inputs.ruby-version }}
+          CACHE_BUST=$(date +%Y-%W)
         cache-from: type=registry,ref=masoo/ubuntu-2204-ruby:buildcache
         cache-to: type=registry,ref=masoo/ubuntu-2204-ruby:buildcache,mode=max
     - name: Build and push Ruby ${{ inputs.ruby-version }} (without cache-to)
@@ -45,4 +46,5 @@ runs:
         tags: masoo/ubuntu-2204-ruby:${{ inputs.ruby-version }}
         build-args: |
           RUBY_VERSION=${{ inputs.ruby-version }}
+          CACHE_BUST=$(date +%Y-%W)
         cache-from: type=registry,ref=masoo/ubuntu-2204-ruby:buildcache
